--- a/src/components/favourite/favourite.css
+++ b/src/components/favourite/favourite.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    height: 64vh;
+    height: 65vh;
     gap: 1rem
 }
 
@@ -18,7 +18,12 @@
 }
 
 .favText {
+    display: flex;
+    justify-content: space-between;
     padding: 2rem 0rem 2rem 0rem;
+}
+
+.favTextLeft {
     color: #FFFFFF;
     font-family: Roboto;
     font-size: 13px;
@@ -26,18 +31,156 @@
     line-height: 15px;
 }
 
-.favPlaces {
+.favTextRight {
+    color: #FFFFFF;
+    font-family: Roboto;
+    font-size: 13px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    line-height: 15px;
+    text-align: right;
+}
+
+.favPlaceList {
     display: flex;
     flex-direction: column;
     height: 64vh;
 
 }
 
-.places {
-    opacity: 0.2;
-    display: flex;
-    justify-content: flex-start;
-    background-color: #FFFFFF;
+.favPlaces {
+    background-color: rgb(255, 255, 255, 0.15);
     padding: 1rem 1rem;
 
+}
+
+
+.favPlaceItem {
+    display: flex;
+    background-color: #000000;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.placeTemp {
+    background-color: white;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
+}
+
+.placeImage {}
+
+.place {
+    /* color: #ffe539; */
+    color: #FFFFFF;
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    line-height: 38px;
+}
+
+.condition {
+    color: #FFFFFF;
+    font-family: Roboto;
+    font-family: Roboto;
+    font-size: 18px;
+    letter-spacing: 0;
+    line-height: 21px;
+}
+
+.temp {
+    color: #FFFFFF;
+    font-family: Roboto;
+    font-weight: 500;
+    font-size: 32px;
+    letter-spacing: 0;
+    line-height: 38px;
+}
+
+.modalBlur {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal {
+    border: 1px solid #979797;
+    border-radius: 4px;
+    background-color: #FFFFFF;
+    position: relative;
+    padding: 0.75rem 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 4rem;
+    padding: 3.25rem 6rem;
+}
+
+.modalText {
+    color: #000000;
+    font-family: Roboto;
+    font-size: 15px;
+    letter-spacing: 0.5px;
+    line-height: 18px;
+    text-align: center;
+    font-weight: 600;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+
+}
+
+.btnNo {
+    border-radius: 2px;
+    font-family: Roboto;
+    font-size: 15px;
+    font-weight: 700;
+    letter-spacing: 0;
+    line-height: 18px;
+    text-align: center;
+    padding: 0.5rem 3rem;
+    border: none;
+    outline: none;
+    background-color: transparent;
+}
+
+.btnYes {
+    background-color: #F76B1C;
+    border-radius: 2px;
+    font-family: Roboto;
+    font-size: 15px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    line-height: 18px;
+    text-align: center;
+    color: #FFFFFF;
+    padding: 0.5rem 3rem;
+    border: none;
+    outline: none;
+
+}
+
+.searchFavMobile {
+    display: none;
+}
+
+.favPlaceMobile {
+    display: flex;
+    flex-direction: row;
 }
