--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -32,3 +32,54 @@
     top: 13px;
     right: 15px;
 }
+
+.header_mobile{
+    display: none;
+}
+
+.searchMobile{
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: #FFFFFF;
+    position: fixed;
+}
+
+.searchInputMobile{
+    position: relative;
+    display: flex;
+    padding: 1.5rem 2rem 1.5rem 2rem;
+    gap: 3rem;
+    border-bottom: 1px solid rgb(0, 0, 0, 0.2);
+
+}
+
+.arrowMobile{
+    position: absolute;
+    height: 16px;
+    width: 16px;
+}
+
+.searchBarMobile{
+    width: 100%;
+    outline: none;
+    border: none;
+}
+
+.searchBarMobile::placeholder{
+    opacity: 0.3;
+    color: rgb(0, 0, 0);
+    font-family: Roboto;
+    font-size: 14px;
+    letter-spacing: 0px;
+    font-weight: 600;
+    line-height: 36px;
+}
+
+
+
+
+
+
+
