--- a/src/components/tabs/tabs.css
+++ b/src/components/tabs/tabs.css
@@ -8,6 +8,7 @@
     justify-content: space-between;
     border-bottom: 1px solid rgb(255, 255, 255, 0.3);
     padding: 4rem 1rem 0.01rem 1rem;
+    font-weight: 300;
 
 }
 
@@ -32,7 +33,7 @@
 .tab {
     color: #FFFFFF;
     font-family: Roboto;
-    font-size: 14px;
+    font-size: 13px;
     letter-spacing: 0;
     line-height: 15px;
     text-decoration: none;
@@ -47,6 +48,7 @@
     letter-spacing: 0;
     line-height: 16px;
     text-align: right;
+    font-weight: 300;
 }
 
 .tabLink>.active {
