--- a/src/components/favourite/favourite.css
+++ b/src/components/favourite/favourite.css
@@ -11,7 +11,7 @@
     color: #FFFFFF;
     font-family: Roboto;
     font-size: 18px;
-    font-weight: 500;
+    font-weight: 300;
     letter-spacing: 1px;
     line-height: 21px;
     text-align: center;
@@ -35,7 +35,7 @@
     color: #FFFFFF;
     font-family: Roboto;
     font-size: 13px;
-    font-weight: 600;
+    font-weight: 500;
     letter-spacing: 1px;
     line-height: 15px;
     text-align: right;
@@ -57,14 +57,12 @@
 
 .favPlaceItem {
     display: flex;
-    background-color: #000000;
     justify-content: space-between;
     align-items: center;
 
 }
 
 .placeTemp {
-    background-color: white;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -78,9 +76,9 @@
     color: #FFFFFF;
     font-family: Roboto;
     font-size: 16px;
-    font-weight: 600;
+    font-weight: 500;
     letter-spacing: 1px;
-    line-height: 38px;
+    line-height: 19px;
 }
 
 .condition {
@@ -134,7 +132,6 @@
     letter-spacing: 0.5px;
     line-height: 18px;
     text-align: center;
-    font-weight: 600;
 }
 
 .buttons {
@@ -150,7 +147,7 @@
     border-radius: 2px;
     font-family: Roboto;
     font-size: 15px;
-    font-weight: 700;
+    font-weight: 500;
     letter-spacing: 0;
     line-height: 18px;
     text-align: center;
@@ -165,7 +162,7 @@
     border-radius: 2px;
     font-family: Roboto;
     font-size: 15px;
-    font-weight: 600;
+    font-weight: 500;
     letter-spacing: 1px;
     line-height: 18px;
     text-align: center;
@@ -180,7 +177,10 @@
     display: none;
 }
 
-.favPlaceMobile {
-    display: flex;
-    flex-direction: row;
+.favPlaceMobileItem{
+   display: none;
+}
+
+.modalMobileBlur{
+    display: none;
 }
