--- a/src/components/homeTab/homeTab.css
+++ b/src/components/homeTab/homeTab.css
@@ -1,4 +1,4 @@
-.places{
+.places {
   color: #FFFFFF;
   font-family: Roboto;
   font-size: 20px;
@@ -9,44 +9,45 @@
 
 }
 
-.image{
-    display: flex;
-    flex-direction: row;
-    gap: 5px;
-    cursor: pointer;
-    padding-top: 1.5rem;
-    align-items: center;
-   
+.image {
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+  cursor: pointer;
+  padding-top: 1.5rem;
+  align-items: center;
+
 }
 
-.img{
-    height: 20px;
-    width: 20px;
+.img {
+  height: 20px;
+  width: 20px;
 }
 
-.favourite{
+.favourite {
   font-family: Roboto;
   font-size: 13px;
   font-weight: 500;
-  letter-spacing: 1px; 
+  letter-spacing: 1px;
 }
 
-.sunnyImage{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-bottom: 1px solid rgb(255, 255, 255, 0.3);
-    padding: 4rem 0rem 7rem 0rem;
-    gap: 2rem;
+.sunnyImage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-bottom: 1px solid rgb(255, 255, 255, 0.3);
+  padding: 4rem 0rem 7rem 0rem;
+  gap: 2rem;
 
 
 }
-.temp{
-    display: flex;
-    
+
+.temp {
+  display: flex;
+
 }
 
-.tempCount{
+.tempCount {
   color: #FFFFFF;
   font-family: Roboto;
   font-size: 64px;
@@ -55,7 +56,7 @@
 
 }
 
-.conversion{
+.conversion {
   box-sizing: border-box;
   padding: 2px;
   border: 1px solid #FFFFFF;
@@ -63,6 +64,11 @@
 }
 
 
-.favourite_mobile .places_mobile{
+.favourite_mobile .places_mobile {
   display: none;
+}
+
+.switchImage {
+  height: 40px;
+  width: 40px;
 }
