--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,31 +1,32 @@
-.footer{
+.footer {
     display: flex;
     justify-content: space-around;
     padding-top: 3.5rem;
     min-width: 100px;
-   
+
 }
 
-.footerItem{
+.footerItem {
     display: flex;
     gap: 1rem;
 }
 
-.footerInfo{
+.footerInfo {
     display: flex;
     flex-direction: column;
     gap: 0.75rem;
 }
 
-.footerText{
+.footerText {
     color: #FFFFFF;
     font-family: Roboto;
     font-size: 15px;
     letter-spacing: 0;
     line-height: 18px;
+    font-weight: 300;
 }
 
-.footerValue{
+.footerValue {
     color: #FFFFFF;
     font-family: Roboto;
     font-size: 18px;
@@ -33,6 +34,7 @@
     letter-spacing: 0;
     line-height: 21px;
     text-align: center;
+    font-weight: 300;
 }
 
 @media only screen and (max-width: 808px) {
@@ -41,16 +43,16 @@
         width: 23px;
         height: 22px;
     }
-   
-    .footerText{
+
+    .footerText {
         font-size: 13px;
     }
 
-    .footerValue{
+    .footerValue {
         font-size: 19px;
     }
 
-    .footerInfo{
+    .footerInfo {
         gap: 0.5rem;
     }
 }
