--- a/src/views/HomePage/homePage.css
+++ b/src/views/HomePage/homePage.css
@@ -3,7 +3,7 @@
     height: 100%;
     width: 100vw;
     min-height: 100vh;
-    background-image: linear-gradient(0, #5d52c7, #92428f);
+    background-image: linear-gradient(to right, #5d52c7, #92428f);
     background-repeat: no-repeat;
 }
 
@@ -95,7 +95,7 @@
         background-color: rgb(255, 255, 255, 0.2) !important;
         overflow-y: hidden !important;
         /* margin-top: 9rem; */
-        padding: 1.8rem 0rem !important;
+        padding: 2.3rem 0rem !important;
 
     }
 
@@ -266,6 +266,7 @@
         font-size: 14px;
         letter-spacing: 0;
         line-height: 16px;
+        font-weight: 300;
     }
 
     .placeTempMobile {
@@ -334,30 +335,30 @@
     }
 
     .buttonsMobile {
-        display: flex!important;
-        flex-direction: row!important;
+        display: flex !important;
+        flex-direction: row !important;
         align-items: center;
-        justify-content: flex-end!important;
+        justify-content: flex-end !important;
         cursor: pointer;
-        gap: 3rem!important;
+        gap: 3rem !important;
 
     }
 
-    .tempCount{
-        line-height: 61px!important;
-        font-size: 52px!important;
+    .tempCount {
+        line-height: 61px !important;
+        font-size: 52px !important;
     }
-     
+
     .sunnyImage {
-        line-height: 61px!important;
-        font-size: 52px!important;
+        line-height: 61px !important;
+        font-size: 52px !important;
         border-bottom: unset !important;
-        padding-bottom: 3.8rem!important;
-        gap: 1rem!important;
+        padding-bottom: 5.6rem !important;
+        gap: 1rem !important;
     }
 
-    .text{
-        font-weight: 300!important;
+    .text {
+        font-weight: 300 !important;
     }
 
 
