--- a/src/components/favourite/favourite.css
+++ b/src/components/favourite/favourite.css
@@ -31,7 +31,12 @@
     letter-spacing: 0;
     line-height: 15px;
 }
-
+.favPlaces {
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+    padding: 1rem 1rem;
+}
 .favTextRight {
     color: #FFFFFF;
     font-family: Roboto;
@@ -49,18 +54,12 @@
 
 }
 
-.favPlaces {
-    background-color: rgb(255, 255, 255, 0.15);
-    padding: 1rem 1rem;
-
-}
-
-
 .favPlaceItem {
+    background-color: rgba(255, 255, 255, 0.15);
     display: flex;
     justify-content: space-between;
     align-items: center;
-
+    padding: 1rem;
 }
 
 .placeTemp {
@@ -183,4 +182,20 @@
 
 .modalMobileBlur {
     display: none;
+}
+
+.cel{
+    height: 28px;
+    width: 17px;
+    font-weight: 300;
+    display: flex;
+    color: #FFFFFF;
+    font-size: 20px;
+}
+
+.celFlex{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+
 }
